Cambios antes de 01/28/2021

--- a/LimenawebApp/Views/Commercial/Credits_authorize.cshtml
+++ b/LimenawebApp/Views/Commercial/Credits_authorize.cshtml
@@ -58,6 +58,7 @@
                                             <th style="font-size:12px;">Product</th>
                                             <th style="font-size:10px;">UoM</th>
                                             <th style="font-size:10px;">QTY</th>
+                                            <th style="font-size:10px;">SRP</th>
                                             <th style="font-size:12px;">Reason</th>
                                             <th style="font-size:12px;">Product to return</th>
                                             <th style="font-size:12px;">User</th>
@@ -83,6 +84,7 @@
                             <td style="font-size:11px;">@product.ItemName</td>
                             <td style="font-size:10px;">@product.UoMCode</td>
                             <td style="font-size:10px;">@product.Quantity</td>
+                            <td style="font-size:10px;">@product.SRP</td>
                             <td style="font-size:11px;">@product.Request_reason</td>
                             <td style="font-size:11px;">
                                 @if (product.ReturnItemCode == "" || product.ReturnItemCode == null)
