--- a/LimenawebApp/Views/Pricerequest/Requesthistory.cshtml
+++ b/LimenawebApp/Views/Pricerequest/Requesthistory.cshtml
@@ -56,6 +56,7 @@
                     </select>
                     <button id="btnsaveproducts" class="btn btn-warning ml-3">Export data</button>
                     <a href="#" data-toggle="modal" data-target="#modal-newbolsa" class="btn btn-success ml-3"> Increase/Decrease Bag</a>
+                    <a href="@Url.Action("RequesthistoryNOSR","Pricerequest")" class="btn btn-info ml-3"> Supervisors History</a>
                 </div>
             </div>
             <div class="container-fluid page__container">
