--- a/LimenawebApp/Views/Shared/New_design/Scripts/ReceiveCreditsScript.cshtml
+++ b/LimenawebApp/Views/Shared/New_design/Scripts/ReceiveCreditsScript.cshtml
@@ -557,7 +557,7 @@
                     uomEntry: uomEntry,
                     returnReasonCode: returnReasonCode,
                     price: price,
-
+                    visOrder: visOrder
                 }
 
 
