--- a/LimenawebApp/Views/Shared/RightSidebar_main.cshtml
+++ b/LimenawebApp/Views/Shared/RightSidebar_main.cshtml
@@ -109,7 +109,7 @@
                 </ul>
             </div>*@
             <div class="right-widget">
-                <div class="custom-title-wrap bar-success mb-4">
+                @*<div class="custom-title-wrap bar-success mb-4">
                     <div class="custom-title">Notification</div>
                 </div>
                 <div>
@@ -141,7 +141,7 @@ else
                     <div class="text-center mt-3">
                         <a class="nav-link px-0" href="#">View all notification</a>
                     </div>
-                </div>
+                </div>*@
             </div>
         </div>
     </div>
