--- a/LimenawebApp/Views/Shared/New_design/Head.cshtml
+++ b/LimenawebApp/Views/Shared/New_design/Head.cshtml
@@ -39,7 +39,8 @@
 <link type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet">
 
 <link href="~/Content/appcontent/assets/vendor/select2/css/select2.css" rel="stylesheet">
-
+<!-- Flowchart CSS and JS -->
+<link rel="stylesheet" href="~/Content/assets/vendor/flowchart/jquery.flowchart.css">
 @if (ViewBag.Title == "Distribuidora Limeña - Product Catalog")
 
 {
@@ -54,6 +55,122 @@
 {
     <link rel="stylesheet" href="~/Content/appcontent/assets/css/fixedColumns.dataTables.css">
     <link rel="stylesheet" href="~/Content/appcontent/assets/vendor/contextmeu/jquery.contextMenu.css">
+
+}
+@if (ViewBag.Title == "Credits flow")
+{
+    <style>
+       ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+ul::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+ul.timeline {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 50px 30px;
+}
+ul.timeline > li {
+  width: calc( 100% / 6 );
+}
+ul.timeline > li:nth-of-type(odd) > .content {
+  transform: translateY(calc(-100% - 24px));
+}
+ul .year {
+  color: #ffd402;
+  background: #3f444c;
+  display: block;
+  position: relative;
+  padding-left: 24px;
+  line-height: 24px;
+  font-weight: bold;
+  font-size: 18px;
+}
+ul .year::before {
+  content: "";
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  background: #ffd402;
+  border-radius: 50%;
+  left: -24px;
+  top: calc( (40 - 24) / 2 * -1px );
+}
+ul .year.new {
+  border-radius: 0 24px 24px 0;
+}
+ul .year.new::after {
+  content: "";
+  width: 5px;
+  height: 5px;
+  display: block;
+  border: 20px solid #3f444c;
+  box-sizing: border-box;
+  border-top-color: transparent;
+  border-right-color: transparent;
+  border-bottom-color: transparent;
+  position: absolute;
+  right: -30px;
+  top: -9.5px;
+}
+ul .content {
+  border-left: 8px solid #ffd402;
+  margin-left: -8px;
+  padding: 15px 0;
+  padding-right: 24px;
+}
+ul .content > li {
+  padding-left: 20px;
+  border-bottom: 4px solid #eef4f7;
+  padding-bottom: 8px;
+  position: relative;
+  margin-left: -8px;
+}
+ul .content > li:last-of-type {
+  border-bottom: 0;
+  padding-bottom: 0;
+}
+ul .content > li::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  background: #eef4f7;
+  left: 2px;
+  top: 8px;
+}
+
+@@media screen and (max-width: 1140px) {
+  ul.timeline > li {
+    width: calc( 100% / 4 );
+  }
+}
+@@media screen and (max-width: 991px) {
+  ul.timeline > li {
+    width: calc( 100% / 2 );
+  }
+}
+@@media screen and (max-width: 767px) {
+  ul.timeline {
+    display: block;
+  }
+  ul.timeline > li {
+    width: 100%;
+  }
+  ul.timeline > li:nth-of-type(odd) .content {
+    transform: none;
+  }
+}
+
+
+    </style>
 
 }
 
@@ -230,7 +347,7 @@
     </style>
 }
 
-@if (ViewBag.Title == "Distribuidora Limeña - Planning" || ViewBag.Title == "Distribuidora Limeña - Planning Routes")
+@if (ViewBag.Title == "Distribuidora Limeña - Planning" || ViewBag.Title == "Distribuidora Limeña - Planning Routes" || ViewBag.Title == "Distribuidora Limeña - Planning RoutesWMS")
 {
     <link rel="stylesheet" href="~/Content/assets/css/bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="~/Content/assets/css/theme.css" type="text/css" />
@@ -284,7 +401,7 @@
     </style>
 
 }
-@if (ViewBag.Title == "Distribuidora Limeña - Planning order")
+@if (ViewBag.Title == "Distribuidora Limeña - Planning order" || ViewBag.Title == "Distribuidora Limeña - Planning orderWMS")
 {
 
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/rowreorder/1.2.5/css/rowReorder.dataTables.min.css">
