--- a/LimenawebApp/Views/Shared/Scripts_main.cshtml
+++ b/LimenawebApp/Views/Shared/Scripts_main.cshtml
@@ -293,7 +293,13 @@ else
                     document.getElementById("ss5_submenu").style.display = "block";
                     document.getElementById("tasks_submenu").style.display = "block";
                     document.getElementById("tasks_submenu2").style.display = "block";
+                    
 
+                }
+
+                if (elementrol == "SalesReport") {
+                    document.getElementById("drop1").style.display = "block";
+                    document.getElementById("tasks_submenu9").style.display = "block";
                 }
                 if (elementrol == "Credits Authorizer") {
                     document.getElementById("ss4_submenu").style.display = "block";
@@ -308,6 +314,7 @@ else
             roles.forEach(function (elementrol) {
                 if (elementrol == "Planning") {
                     document.getElementById("invo1_submenu").style.display = "block";
+                    document.getElementById("invo4_submenu").style.display = "block";
                     document.getElementById("reportop1_submenu").style.display = "block";
                 }
                 if (elementrol == "Quality Control") {
@@ -331,19 +338,19 @@ else
         if (element == "Inventory") {
             //document.getElementById("home_menuInventory").style.display = "block";
             document.getElementById("inventory_menu").style.display = "block";
+            document.getElementById("stock_submenu").style.display = "block";
+            //roles.forEach(function (elementrol) {
+            //    if (elementrol == "Admin") {
+            //        document.getElementById("stock_submenu").style.display = "block";
+            //    }
+            //    if (elementrol == "Supervisor") {
+            //        document.getElementById("stock_submenu").style.display = "block";
+            //    }
+            //    if (elementrol == "Picker") {
+            //        document.getElementById("stock_submenu").style.display = "block";
 
-            roles.forEach(function (elementrol) {
-                if (elementrol == "Admin") {
-                    document.getElementById("stock_submenu").style.display = "block";
-                }
-                if (elementrol == "Supervisor") {
-                    document.getElementById("stock_submenu").style.display = "block";
-                }
-                if (elementrol == "Picker") {
-                    document.getElementById("stock_submenu").style.display = "block";
-
-                }
-            });
+            //    }
+            //});
         }
         if (element == "Management") {
             document.getElementById("manag_menu").style.display = "block";
@@ -351,6 +358,7 @@ else
             document.getElementById("invo1_submenu").style.display = "block";
             document.getElementById("invo2_submenu").style.display = "block";
             document.getElementById("invo3_submenu").style.display = "block";
+            document.getElementById("invo4_submenu").style.display = "block";
             document.getElementById("accr_menu").style.display = "block";
             document.getElementById("oper_menu").style.display = "block";
             document.getElementById("operpur_submenu").style.display = "block";
@@ -370,6 +378,7 @@ else
             document.getElementById("tasks_submenu2").style.display = "block";
             //document.getElementById("home_menuInventory").style.display = "block";
             document.getElementById("marketing_menu").style.display = "block";
+            document.getElementById("tasks_submenu9").style.display = "block";
         }
         if (element == "Customer") {
             document.getElementById("home_menuCustomers").style.display = "block";
